--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -21,11 +21,14 @@ jobs:
         name: dockerhub login
         run: docker login -u  ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_PASSWORD }}
 
-      - name: buildx ls
+      -
+        name: buildx ls
         run:  buildx ls
-      _
+      -
         name: Build and push
         run: docker buildx build --push --platform linux/arm/v7,linux/arm64/v8,linux/amd64 -t chuqian/webserver:latest .
+
+
 
 #      -
 #        name: docker image build
